// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <input
        class="sc-iqAbSa hEDQdD"
        id="otherLoanAmountField"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value="test"
      />
      <span
        class="sc-bqGHjH hLEuSv"
      >
        PLN
      </span>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa dLtrbu"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-iqAbSa hEDQdD"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-bqGHjH hLEuSv"
      >
        PLN
      </span>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-iqAbSa dLtrbu"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value=""
      />
      <span
        class="sc-bqGHjH hLEuSv"
      >
        PLN
      </span>
    </div>
  </form>
</div>
`;
